# adventofcode2022

./: CMakeLists.txt  README.md
src/01/: main.c  part1.c  part2.c
src/02/: part1.c  part2.c
src/03/: part1.c  part2.c
src/04/: part1.c  part2.c
src/05/: 05-head.txt  part1.c  part2.c
src/06/: part1.c  part2.c
